# jxtl

./: .dockerignore  .gitignore  Containerfile  LanguageBindings.md  LanguageReference.md  Makefile.am  Makefile.in  ProjectHome.md  README.md  autogen.sh  config.h.in  configure  configure.ac  containerbuild.sh
.github/workflows/: build-package.yml
bindings/include/: template.h  template.i
bindings/perl/: Makefile.PL.in  libjxtl.i  perl_util.c  perl_util.h  template.c  template.h  template_funcs.c  template_funcs.h
bindings/python/: capsulethunk.h  libjxtl.i  py_util.c  py_util.h  pyproject.toml.in  setup.py.in  template_funcs.c  template_funcs.h  test.py
libjxtl/: Makefile.am  Makefile.in  apr_macros.h  json.c  json.h  json_lex.c  json_lex.h  json_lex.l  json_node.c  json_node.h  json_parse.c  json_parse.h  json_parse.y  json_parser.c  json_parser.h  json_path.c  json_path.h  json_path_lex.c  json_path_lex.h  json_path_lex.l  json_path_parse.c  json_path_parse.h  json_path_parse.y  json_path_parser.c  json_path_parser.h  json_writer.c  json_writer.h  json_writer_ctx.c  json_writer_ctx.h  jxtl.c  jxtl.h  jxtl_lex.c  jxtl_lex.h  jxtl_lex.l  jxtl_parse.c  jxtl_parse.h  jxtl_parse.y  jxtl_path.c  jxtl_path.h  jxtl_path_expr.c  (+22 more)
src/: Makefile.am  Makefile.in  json_path.c  json_verify.c  jxtl.c  jxtl.h  jxtl_lex.c  jxtl_lex.h  jxtl_lex.l  jxtl_parse.c  jxtl_parse.h  jxtl_parse.y  jxtl_path_convert.c  jxtl_path_convert.l  xml2json.c
test/: Makefile.am  Makefile.in  run_tests.sh  t.xml  test.pl  test.py
test/t1/: input  output
test/t10/: input  output
test/t11/: input  output
test/t2/: input  output
test/t3/: input  output
test/t4/: input  output
test/t5/: input  output
test/t6/: input
test/t7/: input  output
test/t8/: input  output
test/t9/: input  output
